failed try to add vmArg '--enable-preview'